// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "github.com/zhangshanwen/transport/utils/proto";
option java_multiple_files = true;
option java_package = "io.grpc.transport.proto";
option java_outer_classname = "Proto";
import "utils/proto/base.proto";

package proto;

service  Node{
  rpc Ping (NormalRequest)  returns (NormalReply){}
  rpc Hash (HashRequest) returns (HashReply){}
  rpc SyncFile(FileRequest) returns(NormalReply){}
}
message HashRequest {
  string name = 1;
}
message HashReply {
  int32 code = 1;
  string hash = 2;
}

message FileRequest {
  string name = 1;
  bytes files = 2;
}